[package]
name = "ned"
description = "Ned is the new standard text editor."
version = "0.1.1"
authors = ["Vincent Ollivier <v@vinc.cc>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/vinc/ned"
readme = "README.md"

[dependencies]
colored = "1.6.0"
regex = "1"
rustyline = "5.0.0"
